# nullpol

./: .coveragerc  .gitignore  .gitlab-ci.yml  .ignore_words.txt  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  cliff.toml  cspell.json  environment.yml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  zensical.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: CI.yml  ci.yml  codeql.yml  documentation.yml  publish.yml  publish_testpypi.yml  schedule-update-actions.yml  scheduled-release.yml  semantic-pr-check.yml  sphinx.yml
docs/: asimov.md  citing.md  index.md  injections.md  installation.md  requirements.txt
docs/examples/: scalar-tensor.md
docs/reference/: index.md
docs/reference/nullpol/: index.md  version.md
docs/source/: asimov.rst  citing-nullpol.rst  conf.py  example_scalar_tensor.rst  examples.rst  index.rst  injections.rst  installation.rst
nullpol/: .data_generator.py.swp  __init__.py  antenna_pattern.py  chi2_likelihood.py  clustering.py  conversion.py  data_generator.py  filter.py  frequentist_p_values.py  lensing_likelihood.py  lensing_null_projector.py  lensing_projector_generator.py  likelihood.py  null_projector.py  null_stream.py  prior.py  projector_generator.py  time_shift.py  transform.py  transform.pyx  transform_c.py  transform_py.py
nullpol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nullpol/asimov/: __init__.py  analysis_defaults.yaml  asimov.py  nullpol-analysis.yaml  nullpol.ini  nullpol.py  pesummary.py  tgrflow.py  utility.py
nullpol/calibration/: __init__.py  antenna_pattern.py  calibration.py
nullpol/clustering/: __init__.py  clustering.py  logistic_probability_map.py  plot.py  single.py  sky_maximized_spectrogram.py  threshold_filter.py  time_frequency_map.py
nullpol/detector/: __init__.py  interferometer.py  networks.py  strain_data.py  whiten.py
nullpol/injection/: injection.py
nullpol/job_creation/: __init__.py  analysis_node.py  generation_node.py  nullpol_pipe_dag_creator.py
nullpol/likelihood/: __init__.py  chi2_likelihood.py  chi2_time_frequency_likelihood.py  clustering.py  constrained_time_frequency_likelihood.py  fractional_projection_time_frequency_likelihood.py  gaussian_time_frequency_likelihood.py  h_marginalized_time_frequency_likelihood.py  likelihood.py  time_frequency_likelihood.py  unconstrained_likelihood.py  weighted_gaussian_time_frequency_likelihood.py
nullpol/null_stream/: __init__.py  antenna_pattern.py  encoding.py  null_projector.py  null_stream.py  projector.py  projector_generator.py  signal_estimator.py  time_shift.py  whiten.py
nullpol/prior/: default.py
nullpol/psd/: __init__.py  psd.py
nullpol/result/: result.py
nullpol/source/: simple_map.py
nullpol/time_frequency_transform/: __init__.py  fft_funcs.py  gsl_wrapper.py  helper.py  inverse_wavelet_freq_funcs.py  inverse_wavelet_freq_funcs.pyx  inverse_wavelet_time_funcs.pxd  inverse_wavelet_time_funcs.py  inverse_wavelet_time_funcs.pyx  stft.py  transform_freq_funcs.pxd  transform_freq_funcs.py  transform_freq_funcs.pyx  transform_time_funcs.py  transform_time_funcs.pyx  wavelet_transform.pxd  wavelet_transform.pyx  wavelet_transforms.py
nullpol/tools/: config.ini  create_injection.py  create_time_frequency_filter_from_sample.py  data_analysis.py  data_generation.py  default_config_create_injection.ini  get_analysis_defaults_ledger.py  get_asimov_yaml.py  input.py  main.py  null_energy_test.py  nullpol_pipe.py  parser.py  simulate_psd_from_psd.py
nullpol/utility/: __init__.py  error.py  filesystem.py  overlap.py  version.py
nullpol/utils/: __init__.py  config.py  convert_type.py  log.py
nullpol/waveform/: snr_var_constrained.py  unconstrained.py
nullpol/wdm/: README.md  inverse_wavelet_freq_funcs.pxd  inverse_wavelet_freq_funcs.pyx  inverse_wavelet_time_funcs.pxd  inverse_wavelet_time_funcs.pyx  transform_freq_funcs.pxd  transform_freq_funcs.pyx  transform_time_funcs.pxd  transform_time_funcs.pyx  wavelet_transform.pxd  wavelet_transform.pyx
scripts/: README.md  auto_generate_init.py  validate_ci_test_coverage.py
src/nullpol/: __init__.py  version.py
test/: demo_test.py  detector_test.py  import_test.py  null_stream_test.py  version_test.py
test/calibration/: calibration_test.py
test/detector/: interferometer_test.py  whiten_test.py
test/injection/: injection_test.py
test/likelihood/: chi2_time_frequency_likelihood_test.py  whiten.ipynb
test/null_stream/: encoding.py  projector_test.py
test/psd/: psd_test.py
test/time_frequency_transform/: wavelet_transform_test.py
test/tools/: create_injection_test.py  create_time_frequency_filter_from_sample_test.py
test/utility/: filesystem_test.py  log_test.py  version_test.py
tests/: .gitignore  smoke_test.py  test_import.py  test_version.py
tests/analysis/: __init__.py  test_data_context.py  test_encoding.py  test_null_stream.py  test_result.py  test_signal_processing.py
tests/cli/: __init__.py  create_injection_test.py  create_time_frequency_filter_from_sample_test.py  test_create_injection.py  test_create_time_frequency_filter.py  test_data_analysis_validation.py  test_input.py
tests/detector/: __init__.py  test_networks.py  whiten_test.py
tests/injection/: injection_test.py
tests/integrations/: __init__.py  test_asimov.py  test_htcondor.py
tests/likelihood/: .gitignore  test_chi2_time_frequency_likelihood.py
tests/null_stream/: antenna_pattern_test.py  encoding_test.py  projector_test.py
tests/simulation/: __init__.py  test_injection.py  test_source.py
tests/time_frequency_transform/: wavelet_transform_test.py
tests/tools/: create_injection_test.py  create_time_frequency_filter_from_sample_test.py  data_generation_test.py  mock_psd.txt
tests/utility/: filesystem_test.py  log_test.py
tests/utils/: __init__.py  test_convert_type.py  test_error.py  test_filesystem.py  test_imports.py  test_json_utils.py  test_log.py
(+218 files in other folders)
