[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nullpol"
description = "A package to perform model-independent polarization test of gravitational-wave signals."
authors = [
    { name = "Isaac C.F. Wong", email = "chunfung.wong@kuleuven.be" },
    { name = "Thomas Ng" },
    { name = "Balázs Cirok" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "matplotlib",
    "numpy",
    "bilby",
    "bilby_pipe<=1.7.0",
    "gwpy",
    "numba>=0.56",
    "rocket-fft",
    "scipy",
    "ConfigArgParse",
    "pycbc",
    "healpy",
    "h5py",
    "pandas",
]

[project.optional-dependencies]
asimov = ["asimov", "cbcflow"]
spark = ["pyspark>=3.0.0"]
test = [
    "check-manifest==0.51",
    "black==25.11.0",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pre-commit==4.4.0",
    "pytest-mock<3.15.2",
    "pytest-github-actions-annotate-failures",
    "ruff==0.14.5",
]

[project.urls]
Documentation = "https://git.ligo.org/bayesian-null-stream/nullpol/docs"
Source = "https://git.ligo.org/bayesian-null-stream/nullpol"
Tracker = "https://git.ligo.org/bayesian-null-stream/nullpol/-/issues"

[tool.flit.module]
name = "nullpol"

[tool.black]
line-length = 120
fast = true

[tool.ruff]
exclude = ["docs"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 10

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-fail-under 0 --cov-append -m 'not integration'"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "spark: marks tests which need Spark",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[project.scripts]
nullpol_create_injection = "nullpol.cli.create_injection:main"
nullpol_create_time_frequency_filter_from_sample = "nullpol.cli.create_time_frequency_filter_from_sample:main"
nullpol_pipe = "nullpol.cli.main:main"
nullpol_pipe_analysis = "nullpol.cli.data_analysis:main"
nullpol_pipe_generation = "nullpol.cli.data_generation:main"
nullpol_pipe_write_default_ini = "nullpol.cli.parser:main"
nullpol_get_asimov_yaml = "nullpol.cli.get_asimov_yaml:main"

[project.entry-points.'asimov.pipelines']
nullpol = "nullpol.integrations.asimov.asimov:Nullpol"

[project.entry-points.'asimov.hooks.postmonitor']
tgrflow = 'nullpol.integrations.asimov.tgrflow:Collector'

[project.entry-points.'asimov.hooks.applicator']
tgrflow = 'nullpol.integrations.asimov.tgrflow:Applicator'
