[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "nullpol"
description = "A package to perform model-independent polarization test of gravitational-wave signals."
authors = [
  { name = "Isaac C.F. Wong", email = "chunfung.wong@kuleuven.be" },
  { name = "Thomas Ng", email = "thomas.ng@nikhef.nl" },
  { name = "Balázs Cirok" },
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
  "matplotlib>=3.10.9",
  "numpy>=2.3.5,<2.5",
  "bilby>=2.8.0",
  "bilby_pipe>=1.9.0",
  "gwpy>=4.0.1",
  "numba>=0.65.0",
  "rocket-fft>=0.3.1",
  "scipy>=1.16.3,<1.17.0",
  "ConfigArgParse>=1.7.5",
  "pycbc>=2.11.0",
  "healpy>=1.19.0",
  "h5py>=3.16.0",
  "pandas>=3.0.3",
]

[project.optional-dependencies]
asimov = ["asimov>=0.6.1", "cbcflow>=0.6.3"]

[dependency-groups]
dev = [
  "ruff>=0.15.16",
  "prek>=0.4.4",
  "pytest-github-actions-annotate-failures>=0.4.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.3",
]
docs = ["zensical>=0.0.44", "mkdocstrings-python>=2.0.4"]
build = ["hatch>=1.17.0"]
release = ["git-cliff>=2.13.1"]

[project.urls]
Documentation = "https://isaac-cf-wong.github.io/nullpol/"
Source = "https://github.com/isaac-cf-wong/nullpol"
Tracker = "https://github.com/isaac-cf-wong/nullpol/issues"
Home = "https://github.com/isaac-cf-wong/nullpol"
"Release Notes" = "https://github.com/isaac-cf-wong/nullpol/releases"

[project.scripts]
nullpol_create_injection = "nullpol.cli.create_injection:main"
nullpol_create_time_frequency_filter_from_sample = "nullpol.cli.create_time_frequency_filter_from_sample:main"
nullpol_pipe = "nullpol.cli.main:main"
nullpol_pipe_analysis = "nullpol.cli.data_analysis:main"
nullpol_pipe_generation = "nullpol.cli.data_generation:main"
nullpol_pipe_write_default_ini = "nullpol.cli.parser:main"
nullpol_get_asimov_yaml = "nullpol.cli.get_asimov_yaml:main"

[project.entry-points.'asimov.pipelines']
nullpol = "nullpol.integrations.asimov.asimov:Nullpol"

[project.entry-points.'asimov.hooks.postmonitor']
tgrflow = 'nullpol.integrations.asimov.tgrflow:Collector'

[project.entry-points.'asimov.hooks.applicator']
tgrflow = 'nullpol.integrations.asimov.tgrflow:Applicator'

[tool.uv-dynamic-versioning]
vcs = "git"      # default
style = "semver" # or pep440, semver, etc.

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/nullpol"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-append -m 'not integration' --cov-report=term-missing"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.ruff]
line-length = 120 # Matches Black's default
target-version = "py312" # Align with CI (3.12–3.14) and requires-python (>=3.12)
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Add pylint rules for fuller coverage
  "SIM", # Similarities
  "T10", # Debugger statements
  "DOC", # Docstring
  "D",   # Doc style
  "S",   # Security
]
lint.ignore = [
  "E501",    # Line length (handled by formatter)
  "C901",    # Disable overly strict complexity checks (optional, adjust as needed)
  "N802",    # Scientific function names (e.g. tf_Nt, DoF)
  "N803",    # Scientific argument names (e.g. Nf, Nt)
  "N806",    # Scientific variable names (e.g. F_matrix, wavelet_Nt)
  "PLR0912", # Too many branches in scientific algorithms
  "PLR0913", # Too many arguments in scientific APIs
  "PLR0915", # Too many statements in complex analysis code
]
fix = true # Enable autofix
lint.unfixable = [] # List rules that should not be autofixed, if any

[tool.ruff.format]
quote-style = "double"       # Use double quotes for strings
indent-style = "space"       # Use spaces for indentation
docstring-code-format = true # Format code in docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in the tests directory
"tests/*" = [
  "S101",
  "ARG001",
  "PLC0415",
  "PLR2004",
  "PT017",
  "PT011",
  "PT018",
  "RUF043",
  "S110",
]
# S101: allow assert statements
# ARG001: allow unused function arguments (common in fixtures)
# PLC0415: allow import statements not at the top level
# PLR2004: allow magic values in the unit tests
"src/nullpol/analysis/result.py" = ["PLC0415", "S301"]
"scripts/*" = ["SIM102", "PLC0415", "PLR2004"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
